hyperlinks, removed fluff

--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -9,7 +9,7 @@ Moondream is a tiny open-source vision AI that brings powerful image understandi
     <div className="text-2xl mb-2">🔍</div>
     <h3 className="text-xl font-semibold mb-2">Discover</h3>
     <p className="text-gray-600 mb-4">New to vision-language models? Learn about image captioning, visual Q&A, object detection, and visual pointing capabilities. See if Moondream is right for your use case.</p>
-    <a href="/cookbook/basic-usage" className="text-blue-500 hover:text-blue-600 mt-auto">Explore capabilities →</a>
+    <a href="/discover" className="text-blue-500 hover:text-blue-600 mt-auto">Explore capabilities →</a>
   </div>
 
   <div className="flex flex-col p-6 bg-white rounded-lg shadow hover:shadow-md transition-shadow">
@@ -23,14 +23,14 @@ Moondream is a tiny open-source vision AI that brings powerful image understandi
     <div className="text-2xl mb-2">📚</div>
     <h3 className="text-xl font-semibold mb-2">Recipes</h3>
     <p className="text-gray-600 mb-4">Learn best practices, optimization tips, and get inspired by real-world examples and implementations using Moondream.</p>
-    <a href="/cookbook/basic-usage" className="text-blue-500 hover:text-blue-600 mt-auto">View recipes →</a>
+    <a href="/recipes" className="text-blue-500 hover:text-blue-600 mt-auto">View recipes →</a>
   </div>
 
   <div className="flex flex-col p-6 bg-white rounded-lg shadow hover:shadow-md transition-shadow">
     <div className="text-2xl mb-2">📊</div>
     <h3 className="text-xl font-semibold mb-2">Specifications</h3>
     <p className="text-gray-600 mb-4">Explore detailed technical specifications, memory requirements, model sizes, and performance benchmarks.</p>
-    <a href="/technical-specifications" className="text-blue-500 hover:text-blue-600 mt-auto">View specs →</a>
+    <a href="/specifications" className="text-blue-500 hover:text-blue-600 mt-auto">View specs →</a>
   </div>
 </div>
 
