--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -35,7 +35,7 @@ Moondream is a tiny open-source vision AI that brings powerful image understandi
 </div>
 
 <Callout type="info" emoji="💡">
-  Want to see Moondream in action? Try our [Interactive Playground](/playground) to experiment with different capabilities.
+  Want to see Moondream in action? Try our [Interactive Playground](https://moondream.ai/playground) to experiment with different capabilities.
 </Callout>
 
 <Callout>
