--- a/src/pages/discover.mdx
+++ b/src/pages/discover.mdx
@@ -212,7 +212,7 @@ Moondream provides a comprehensive set of visual understanding capabilities thro
     <div className="text-2xl mb-2">❓</div>
     <h3 className="text-xl font-semibold mb-2">Visual Question Answering</h3>
     <p className="text-gray-600 mb-4">Ask natural questions about any image and receive detailed answers</p>
-    <ul className="text-sm text-gray-600 list-disc list-inside mt-2">
+    <ul className="text-sm text-gray-600 list-disc list-inside space-y-1">
       <li>Extract specific information from visual content</li>
       <li>Analyze complex scenes and relationships</li>
       <li>Understand context and details in images</li>
@@ -225,7 +225,7 @@ Moondream provides a comprehensive set of visual understanding capabilities thro
     <div className="text-2xl mb-2">📝</div>
     <h3 className="text-xl font-semibold mb-2">Image Captioning</h3>
     <p className="text-gray-600 mb-4">Generate accurate, detailed descriptions of image content</p>
-    <ul className="text-sm text-gray-600 list-disc list-inside mt-2">
+    <ul className="text-sm text-gray-600 list-disc list-inside space-y-1">
       <li>Create alt text for accessibility</li>
       <li>Generate search-optimized descriptions</li>
       <li>Create image embeddings for similarity search</li>
@@ -238,7 +238,7 @@ Moondream provides a comprehensive set of visual understanding capabilities thro
     <div className="text-2xl mb-2">🎯</div>
     <h3 className="text-xl font-semibold mb-2">Object Detection</h3>
     <p className="text-gray-600 mb-4">Locate and identify objects within images</p>
-    <ul className="text-sm text-gray-600 list-disc list-inside mt-2">
+    <ul className="text-sm text-gray-600 list-disc list-inside space-y-1">
       <li>Track object positions and relationships</li>
       <li>Analyze scene composition and layout</li>
       <li>Enable visual inventory management</li>
@@ -251,7 +251,7 @@ Moondream provides a comprehensive set of visual understanding capabilities thro
     <div className="text-2xl mb-2">📍</div>
     <h3 className="text-xl font-semibold mb-2">Visual Pointing</h3>
     <p className="text-gray-600 mb-4">Get precise coordinates for objects in images</p>
-    <ul className="text-sm text-gray-600 list-disc list-inside mt-2">
+    <ul className="text-sm text-gray-600 list-disc list-inside space-y-1">
       <li>Enable spatial reasoning about content</li>
       <li>Support interactive visual applications</li>
       <li>Power precise object localization</li>
