--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -4,6 +4,8 @@ import { Callout } from 'nextra/components'
 
 Moondream is a tiny open-source vision AI that brings powerful image understanding to your applications and runs everywhere. Moondream excels at tasks involving image analysis, object detection, visual reasoning, scene comprehension, and more.
 
+Want to see Moondream in action? Try our [Interactive Playground](https://moondream.ai/playground) to experiment with different capabilities. Need help getting started? Join our [Discord community](https://discord.com/invite/tRUdpjDQfH) for support and discussions!
+
 <div className="grid grid-cols-1 md:grid-cols-2 gap-6 mt-8">
   <div className="flex flex-col p-6 bg-white rounded-lg shadow hover:shadow-md transition-shadow">
     <div className="text-2xl mb-2">🔍</div>
@@ -34,10 +36,3 @@ Moondream is a tiny open-source vision AI that brings powerful image understandi
   </div>
 </div>
 
-<Callout type="info" emoji="💡">
-  Want to see Moondream in action? Try our [Interactive Playground](https://moondream.ai/playground) to experiment with different capabilities.
-</Callout>
-
-<Callout>
-  Need help getting started? Join our [Discord community](https://discord.com/invite/tRUdpjDQfH) for support and discussions!
-</Callout>
